--- a/MIS-app/src/main/java/cz/muni/fi/gui/AppForm.form
+++ b/MIS-app/src/main/java/cz/muni/fi/gui/AppForm.form
@@ -99,7 +99,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="d6d7f" class="javax.swing.JTable" binding="ReservationTable">
+                  <component id="d6d7f" class="javax.swing.JTable" binding="jTableReservations" custom-create="true">
                     <constraints/>
                     <properties/>
                   </component>
@@ -190,7 +190,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="c3be3" class="javax.swing.JTable" binding="GuestsTable">
+                  <component id="c3be3" class="javax.swing.JTable" binding="jTableGuests">
                     <constraints/>
                     <properties/>
                   </component>
@@ -257,7 +257,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="8dfc2" class="javax.swing.JTable" binding="RoomsTable">
+                  <component id="8dfc2" class="javax.swing.JTable" binding="jTableRooms">
                     <constraints/>
                     <properties/>
                   </component>
