--- a/MIS-app/src/main/java/cz/muni/fi/gui/AppForm.form
+++ b/MIS-app/src/main/java/cz/muni/fi/gui/AppForm.form
@@ -99,7 +99,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="d6d7f" class="javax.swing.JTable" binding="jTableReservations" custom-create="true">
+                  <component id="d6d7f" class="javax.swing.JTable" binding="jTableReservations">
                     <constraints/>
                     <properties/>
                   </component>
