--- a/MIS-app/src/main/java/cz/muni/fi/gui/GuestFrame.form
+++ b/MIS-app/src/main/java/cz/muni/fi/gui/GuestFrame.form
@@ -87,19 +87,10 @@
   </Layout>
   <SubComponents>
     <Component class="java.awt.TextField" name="txtFieldPhoneNum">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="textField1"/>
-      </Properties>
     </Component>
     <Component class="java.awt.TextField" name="txtFieldAddress">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="textField2"/>
-      </Properties>
     </Component>
     <Component class="java.awt.TextField" name="txtFieldFullName">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="textField3"/>
-      </Properties>
     </Component>
     <Component class="java.awt.Label" name="lblPhoneNum">
       <Properties>
@@ -128,6 +119,9 @@
           <ResourceString bundle="texts.properties" key="save" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
+      </Events>
     </Component>
     <Component class="java.awt.Button" name="btnCancel">
       <Properties>
@@ -136,6 +130,9 @@
         </Property>
         <Property name="name" type="java.lang.String" value="" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelActionPerformed"/>
+      </Events>
     </Component>
     <Component class="java.awt.Label" name="lblWindowName">
       <Properties>
