MIS 1.7.0. - fully functional system with minor errors/bugs

--- a/MIS-app/src/main/java/cz/muni/fi/gui/AppForm.form
+++ b/MIS-app/src/main/java/cz/muni/fi/gui/AppForm.form
@@ -303,6 +303,9 @@
             <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="verticalTextPosition" type="int" value="3"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JBtnFindGuestActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jBtnFindRoom">
           <Properties>
@@ -313,6 +316,9 @@
             <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="verticalTextPosition" type="int" value="3"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBtnFindRoomActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
