MIS 1.7.0. - refactor of code

--- a/MIS-app/src/main/java/cz/muni/fi/gui/EmptyRoomsFrame.form
+++ b/MIS-app/src/main/java/cz/muni/fi/gui/EmptyRoomsFrame.form
@@ -52,6 +52,9 @@
               <Connection code="new EmptyRoomsTableModel(from,to)" type="code"/>
             </Property>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jTableEmptyRooms.getColumnModel().getColumn(0).setMinWidth(0);&#xd;&#xa;jTableEmptyRooms.getColumnModel().getColumn(0).setMaxWidth(0);&#xd;&#xa;jTableEmptyRooms.getColumnModel().getColumn(0).setWidth(0);"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
