--- a/MIS-app/src/main/java/cz/muni/fi/gui/AppForm.form
+++ b/MIS-app/src/main/java/cz/muni/fi/gui/AppForm.form
@@ -106,6 +106,9 @@
                   <Connection code="new ReservationTableModel()" type="code"/>
                 </Property>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jTableReservation.getColumnModel().getColumn(0).setMinWidth(0);&#xd;&#xa;jTableReservation.getColumnModel().getColumn(0).setMaxWidth(0);&#xd;&#xa;jTableReservation.getColumnModel().getColumn(0).setWidth(0);"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
@@ -131,6 +134,9 @@
               <Events>
                 <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTableGuestFocusGained"/>
               </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jTableGuest.getColumnModel().getColumn(0).setMinWidth(0);&#xd;&#xa;jTableGuest.getColumnModel().getColumn(0).setMaxWidth(0);&#xd;&#xa;jTableGuest.getColumnModel().getColumn(0).setWidth(0);"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
@@ -156,6 +162,9 @@
               <Events>
                 <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTableRoomFocusGained"/>
               </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jTableRoom.getColumnModel().getColumn(0).setMinWidth(0);&#xd;&#xa;jTableRoom.getColumnModel().getColumn(0).setMaxWidth(0);&#xd;&#xa;jTableRoom.getColumnModel().getColumn(0).setWidth(0);"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
